--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gpt-chat-example",
+  "name": "gpt-chat-example-chatgpt-api",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "next": "^13.1.1",
-    "openai": "^3.1.0",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
